--- a/Linear Algrabra-new/Linear Algrabra.tex
+++ b/Linear Algrabra-new/Linear Algrabra.tex
@@ -12,7 +12,17 @@
 \extrainfo{Even though the truth is not a happy time, we have to be honest ,because more effort needed to cover the truth. --- Bertr Russell}
 \logo{logo.png}
 \cover{cover.jpg}
-
+\renewcommand{\AA}{\boldsymbol{A}}
+\newcommand{\BB}{\boldsymbol{B}}
+\newcommand{\CC}{\boldsymbol{C}}
+\newcommand{\DD}{\boldsymbol{D}}
+\newcommand{\XX}{\boldsymbol{X}}
+\newcommand{\YY}{\boldsymbol{Y}}
+\newcommand{\II}{\boldsymbol{I}}
+\newcommand{\TT}{\boldsymbol{T}}
+\newcommand{\PP}{\boldsymbol{P}}
+\newcommand{\QQ}{\boldsymbol{Q}}
+\newcommand{\varep}{\varepsilon}
 \begin{document}
 	\maketitle
 	\mainmatter
@@ -23,61 +33,73 @@
 	\begin{exercise}
 		用正交变换化二次型$f(x_1,x_2,x_3)=x_1^2-2x_2^2-2x_3^2-4x_1x_2+4x_1x_3+8x_2x_3$为标准型,并给出所用的正交变换.
 	\end{exercise}
-	\begin{proof}
-		这个实二次型的矩阵$\boldsymbol{A}$为\\
-		$$
-		\boldsymbol{A}=
-		\begin{bmatrix}
-		1&-2&2\\
-		-2&-2&4\\
-		2&4&-2
-		\end{bmatrix}.
-		$$
-		$$
-		|\lambda\boldsymbol{I}-\boldsymbol{A}|=
-		\begin{vmatrix}
-		\lambda-1&2&-2\\
-		2&\lambda+2&-4\\
-		-2&2-4&\lambda+2
-		\end{vmatrix}
-		=(\lambda-2)^2(\lambda+7).
-		$$
-		$\boldsymbol{A}$的全部特征值是2(二重),-7.\\
-		对特征值2,求出$(2\boldsymbol{I}-\boldsymbol{A})\boldsymbol{X}=0$的基础解系:
-		$$
+	\begin{solution}
+		这个实二次型的矩阵$\AA$为\\
+		\begin{equation}
+			\AA=
+			\begin{bmatrix}
+			1&-2&2\\
+			-2&-2&4\\
+			2&4&-2
+			\end{bmatrix}.
+		\end{equation}
+		\begin{equation}
+			|\lambda\II-\AA|=
+			\begin{vmatrix}
+			\lambda-1&2&-2\\
+			2&\lambda+2&-4\\
+			-2&2-4&\lambda+2
+			\end{vmatrix}
+			=(\lambda-2)^2(\lambda+7).
+		\end{equation}
+		$\AA$的全部特征值是2(二重),-7.\\
+		对特征值2,求出$(2\II-\AA)\XX=0$的基础解系:
+		\begin{equation}
 		\boldsymbol{\alpha}_1=
 		\begin{bmatrix}
-		2\\0\\1
+		2\\
+		0\\
+		1
 		\end{bmatrix},
 		\boldsymbol{\alpha}_2=
 		\begin{bmatrix}
-		-2\\-1\\0
+		-2\\
+		-1\\
+		0
 		\end{bmatrix}.
-		$$
-		对特征值-7,求出$(-7\boldsymbol{I}-\boldsymbol{A})\boldsymbol{X}=0$的基础解系:\\
-		$$
+		\end{equation}
+		对特征值-7,求出$(-7\II-\AA)\XX=0$的基础解系:\\
+		\begin{equation}
 		\boldsymbol{\alpha}_3=
 		\begin{bmatrix}
-		-1\\-2\\2
+		-1\\
+		-2\\
+		2
 		\end{bmatrix}.
-		$$
+		\end{equation}
 		得到三个线性无关的特征向量
-		$$
+		\begin{equation}
 		\boldsymbol{\alpha}_1=
 		\begin{bmatrix}
-		2\\0\\1
+		2\\
+		0\\
+		1
 		\end{bmatrix},
 		\boldsymbol{\alpha}_2=
 		\begin{bmatrix}
-		-2\\-1\\0
+		-2\\
+		-1\\
+		0
 		\end{bmatrix},
 		\boldsymbol{\alpha}_3=
 		\begin{bmatrix}
-		-1\\-2\\2
+		-1\\
+		-2\\
+		2
 		\end{bmatrix}.
-		$$
+		\end{equation}
 		将$\boldsymbol{\alpha}_1,\boldsymbol{\alpha}_2,\boldsymbol{\alpha}_3$正交化\\
-		$$
+		\begin{equation}
 		\begin{aligned}
 		\boldsymbol{\beta}_1&=\boldsymbol{\alpha}_1=
 		\begin{bmatrix}
@@ -92,48 +114,50 @@
 		0\\-2\\1
 		\end{bmatrix}
 		\end{aligned}
-		$$
+		\end{equation}
 		再将$\boldsymbol{\beta}_1,\boldsymbol{\beta}_2,\boldsymbol{\beta}_3$单位化得$\boldsymbol{\mu}_1,\boldsymbol{\mu}_2,\boldsymbol{\mu}_3$
 		即
-		$$
-		\boldsymbol{T}=
+		\begin{equation}
+		\TT=
 		\begin{bmatrix}
 		\frac{2}{\sqrt{5}}&-\frac{\sqrt{5}}{5}&0\\
 		0&0&1\\
 		\frac{1}{\sqrt{5}}&\frac{2\sqrt{5}}{5}&0
 		\end{bmatrix}
-		$$
-		则$\boldsymbol{T}$是正交矩阵,且$\boldsymbol{T}^{-1}\boldsymbol{A}\boldsymbol{T}=diag\{2,2,-7\}$.\\
+		\end{equation}
+		则$\TT$是正交矩阵,且$\TT^{-1}\AA\TT=diag\{2,2,-7\}$.\\
 		令
-		$$
+		\begin{equation}
 		\begin{bmatrix}
 		x_1\\x_2\\x_3
 		\end{bmatrix}
 		=
-		\boldsymbol{T}
+		\TT
 		\begin{bmatrix}
 		y_1\\y_2\\y_3
 		\end{bmatrix}.
-		$$
+		\end{equation}
 		则\\
-		$$f(y_1,y_2,y_3)=2y_1^2+2y_2^2-7y_3^2.$$
-	\end{proof}
+		\begin{equation}
+		f(y_1,y_2,y_3)=2y_1^2+2y_2^2-7y_3^2.
+		\end{equation}
+		\end{solution}
 	\begin{exercise}
 		设$f(x_1,x_2,x_3)=2x_1^2-x_2^2+ax_3^2=2x_1x_2-8x_1x_3+2x_2x_3$在正交变换$x=Qy$下的标准型为$\lambda_1y_1^2+\lambda_2y_2^2$,求$a$的值及一个正交矩阵$Q$.
 	\end{exercise}
-	\begin{proof}
-		因为标准型为$\lambda_1y_1^2+\lambda_2y_2^2$所以$det(\boldsymbol{A})=0$得$a=2$:
-		$$
-		\boldsymbol{A}=
+	\begin{solution}
+		因为标准型为$\lambda_1y_1^2+\lambda_2y_2^2$所以$det(\AA)=0$得$a=2$:
+		\begin{equation}
+		\AA=
 		\begin{bmatrix}
 		2&1&-4\\
 		1&-1&1\\
 		-4&1&2
 		\end{bmatrix}
-		|\lambda\boldsymbol{I}-\boldsymbol{A}|=(\lambda-6)(\lambda+3)\lambda=0
-		$$
+		|\lambda\II-\AA|=(\lambda-6)(\lambda+3)\lambda=0
+		\end{equation}
 		$\lambda=6,\lambda=-3,\lambda=0$的特征向量分别为:
-		$$\boldsymbol{\alpha}_1=
+		\begin{equation}\boldsymbol{\alpha}_1=
 		\begin{bmatrix}
 		-1\\0\\1
 		\end{bmatrix}
@@ -145,49 +169,51 @@
 		\begin{bmatrix}
 		1\\2\\1
 		\end{bmatrix}
-		$$
+		\end{equation}
 		将$\boldsymbol{\alpha}_1,\boldsymbol{\alpha}_2,\boldsymbol{\alpha}_3$单位化,即得:
-		$$
-		\boldsymbol{T}=
+		\begin{equation}
+		\TT=
 		\begin{bmatrix}
 		-\frac{1}{\sqrt{2}}&\frac{1}{\sqrt{3}}&\frac{1}{\sqrt{6}}\\
 		0&-\frac{1}{\sqrt{3}}&\frac{2}{\sqrt{6}}\\
 		\frac{1}{\sqrt{2}}&\frac{1}{\sqrt{3}}&\frac{1}{\sqrt{6}}
 		\end{bmatrix}
-		$$
-		则$\boldsymbol{T}$是正交矩阵,且$\boldsymbol{T}^{-1}\boldsymbol{A}\boldsymbol{T}=diag\{6,-3,0\}$.\\
+		\end{equation}
+		则$\TT$是正交矩阵,且$\TT^{-1}\AA\TT=diag\{6,-3,0\}$.\\
 		令
-		$$
+		\begin{equation}
 		\begin{bmatrix}
 		x_1\\x_2\\x_3
 		\end{bmatrix}
 		=
-		\boldsymbol{T}
+		\TT
 		\begin{bmatrix}
 		y_1\\y_2\\y_3
 		\end{bmatrix}.
-		$$
+		\end{equation}
 		则\\
-		$$f(y_1,y_2,y_3)=6y_1^2-3y_2^2.$$
-	\end{proof}
+		\begin{equation}
+		f(y_1,y_2,y_3)=6y_1^2-3y_2^2.
+		\end{equation}
+	\end{solution}
 	\begin{exercise}
 		用正交变换化二次型
-		$$
+		\begin{equation}
 		f(x_1,\cdots,x_4)=2(x_1^2+x_2^2+x_3^2+x_4^2+x_1x_2+x_3x_4)
-		$$
+		\end{equation}
 		为标准型,并给出所用的正交线性变化.
 	\end{exercise}
-	\begin{proof}
-		二次型方程的矩阵$\boldsymbol{A}$为
-		$$
-		\boldsymbol{A}=
+	\begin{solution}
+		二次型方程的矩阵$\AA$为
+		\begin{equation}
+		\AA=
 		\begin{bmatrix}
 		2&1&0&0\\
 		1&2&0&0\\
 		0&0&2&1\\
 		0&0&1&2
 		\end{bmatrix},
-		|\lambda\boldsymbol{I}-\boldsymbol{A}|=
+		|\lambda\II-\AA|=
 		\begin{vmatrix}
 		\lambda-2&-1&0&0\\
 		-1&\lambda-2&0&0\\
@@ -195,10 +221,10 @@
 		0&0&-1&\lambda-2
 		\end{vmatrix}
 		=(\lambda-3)^2(\lambda-1)^2.
-		$$
-		$\boldsymbol{A}$的全部特征值是3,1.\\
-		对特征值3,求出$(3\boldsymbol{I}-\boldsymbol{A})\boldsymbol{X}=0$的基础解系:
-		$$
+		\end{equation}
+		$\AA$的全部特征值是3,1.\\
+		对特征值3,求出$(3\II-\AA)\XX=0$的基础解系:
+		\begin{equation}
 		\boldsymbol{\alpha}_1=
 		\begin{bmatrix}
 		0\\0\\1\\1
@@ -207,10 +233,10 @@
 		\begin{bmatrix}
 		1\\1\\0\\0
 		\end{bmatrix}.
-		$$
+		\end{equation}
 		把$\boldsymbol{\alpha}_1,\boldsymbol{\alpha}_2$单位化,得\\
-		对特征值1,求出$(\boldsymbol{I}-\boldsymbol{A})\boldsymbol{X}=0$的基础解系:
-		$$
+		对特征值1,求出$(\II-\AA)\XX=0$的基础解系:
+		\begin{equation}
 		\boldsymbol{\alpha}_3=
 		\begin{bmatrix}
 		0\\0\\-1\\1
@@ -219,51 +245,53 @@
 		\begin{bmatrix}
 		-1\\1\\0\\0
 		\end{bmatrix}.
-		$$
+		\end{equation}
 		因$\boldsymbol{\alpha}_1,\boldsymbol{\alpha}_2,\boldsymbol{\alpha}_3,\boldsymbol{\alpha}_4$已经为正交向量组,即正交化得:
-		$$
-		\boldsymbol{T}=
+		\begin{equation}
+		\TT=
 		\begin{bmatrix}
 		0&\frac{1}{\sqrt{2}}&0&-\frac{1}{\sqrt{2}}\\
 		0&\frac{1}{\sqrt{2}}&0&\frac{1}{\sqrt{2}}\\
 		\frac{1}{\sqrt{2}}&0&-\frac{1}{\sqrt{2}}&0\\
 		\frac{1}{\sqrt{2}}&0&\frac{1}{\sqrt{2}}&0
 		\end{bmatrix}
-		\qquad\boldsymbol{T}'\boldsymbol{AT}=\boldsymbol{D}=diag(3,3,1,1);
-		$$
+		\qquad\TT'\boldsymbol{AT}=\DD=diag(3,3,1,1);
+		\end{equation}
 		令
-		$$
+		\begin{equation}
 		\begin{bmatrix}
 		x_1\\x_2\\x_3\\x_4
 		\end{bmatrix}
 		=
-		\boldsymbol{T}
+		\TT
 		\begin{bmatrix}
 		y_1\\y_2\\y_3\\y_4
 		\end{bmatrix}.
-		$$
+		\end{equation}
 		则
-		$$f(y_1,y_2,y_3,y_4)=3y_1^2+3y_2^2+y_3^2+y_4^2.$$
-	\end{proof}
+		\begin{equation}
+		f(y_1,y_2,y_3,y_4)=3y_1^2+3y_2^2+y_3^2+y_4^2.
+		\end{equation}
+	\end{solution}
 	\begin{exercise}
 		求一个正交变换将二次型
-		$$
+		\begin{equation}
 		f=2x_1^2+3x_2^2+3x_3^2+4x_2x_3
-		$$
+		\end{equation}
 		化成标准形.
 	\end{exercise}
-	\begin{proof}
-		二次型矩阵$\boldsymbol{A}$为
-		$$
-		\boldsymbol{A}=
+	\begin{solution}
+		二次型矩阵$\AA$为
+		\begin{equation}
+		\AA=
 		\begin{bmatrix}
 		2&0&0\\
 		0&3&2\\
 		0&2&3
 		\end{bmatrix}
-		$$
+		\end{equation}
 		解得$\lambda_1=5,\lambda_2=2,\lambda_3=1$以及对应的特征向量$\boldsymbol{\alpha}_1,\boldsymbol{\alpha}_2,\boldsymbol{\alpha}_3$为:
-		$$
+		\begin{equation}
 		\boldsymbol{\alpha}_1=
 		\begin{bmatrix}
 		0\\1\\1
@@ -276,127 +304,132 @@
 		\begin{bmatrix}
 		0\\-1\\1
 		\end{bmatrix}.
-		$$
+		\end{equation}
 		对$\boldsymbol{\alpha}_1,\boldsymbol{\alpha}_2,\boldsymbol{\alpha}_3$单位化得:
-		$$
-		\boldsymbol{T}=
+		\begin{equation}
+		\TT=
 		\begin{bmatrix}
 		0&1&0\\
 		\frac{1}{\sqrt{2}}&0&-\frac{1}{\sqrt{2}}\\
 		\frac{1}{\sqrt{2}}&0&\frac{1}{\sqrt{2}}
 		\end{bmatrix}
-		\qquad\boldsymbol{T}'\boldsymbol{AT}=\boldsymbol{D}=diag(5,2,1);
-		$$
+		\qquad\TT'\boldsymbol{AT}=\DD=diag(5,2,1);
+		\end{equation}
 		令
-		$$
+		\begin{equation}
 		\begin{bmatrix}
 		x_1\\x_2\\x_3
 		\end{bmatrix}
 		=
-		\boldsymbol{T}
+		\TT
 		\begin{bmatrix}
 		y_1\\y_2\\y_3
 		\end{bmatrix}.
-		$$
+		\end{equation}
 		则
-		$$f(y_1,y_2,y_3)=5y_1^2+2y_2^2+y_3^2.$$
-	\end{proof}
+		\begin{equation}
+		f(y_1,y_2,y_3)=5y_1^2+2y_2^2+y_3^2.
+		\end{equation}
+	\end{solution}
 	\begin{exercise}
-		设$\boldsymbol{A}$是一个$n$阶正定矩阵，则$|\boldsymbol{A}+\boldsymbol{E}|>1$。
+		设$\AA$是一个$n$阶正定矩阵，则$|\AA+\boldsymbol{E}|>1$。
 	\end{exercise}
 	\begin{proof}
-		设$\boldsymbol{A}$的n个实特征值为$\lambda_1,\cdots,\lambda_n$
-		\\有正交矩阵$\boldsymbol{C}$使得$\boldsymbol{A}=(\boldsymbol{C}')^{-1}\boldsymbol{D}\boldsymbol{C}^{-1}$
-		$$
-		|\boldsymbol{A}+\boldsymbol{E}|=|\boldsymbol{CDC}'+\boldsymbol{E}|=|\boldsymbol{CDC}'+\boldsymbol{CC}'|=|\boldsymbol{C}||\boldsymbol{DC}'+\boldsymbol{C}'|=|\boldsymbol{D}+\boldsymbol{E}||\boldsymbol{C}|^2=(\lambda_1+1)\cdots(\lambda_n+1)>1
-		$$
+		设$\AA$的n个实特征值为$\lambda_1,\cdots,\lambda_n$
+		\\有正交矩阵$\CC$使得$\AA=(\CC')^{-1}\DD\CC^{-1}$
+		\begin{equation}
+		|\AA+\boldsymbol{E}|=|\boldsymbol{CDC}'+\boldsymbol{E}|=|\boldsymbol{CDC}'+\boldsymbol{CC}'|=|\CC||\boldsymbol{DC}'+\CC'|=|\DD+\boldsymbol{E}||\CC|^2=(\lambda_1+1)\cdots(\lambda_n+1)>1
+		\end{equation}
 		且$\lambda_1,\cdots,\lambda_n>0$即
-		$$
-		|\boldsymbol{A}+\boldsymbol{E}|>1.
-		$$
+		\begin{equation}
+		|\AA+\boldsymbol{E}|>1.
+		\end{equation}
 	\end{proof}
 	\begin{exercise}
-		设$n$阶实对称矩阵$\boldsymbol{A}$正定，证明$\boldsymbol{A}^*$也是正定矩阵，其中$\boldsymbol{A}^*$表示$\boldsymbol{A}$的伴随矩阵.
+		设$n$阶实对称矩阵$\AA$正定，证明$\AA^*$也是正定矩阵，其中$\AA^*$表示$\AA$的伴随矩阵.
 	\end{exercise}
 	\begin{proof}
-		存在实矩阵$\boldsymbol{C}$,使得
-		$$\boldsymbol{A}=\boldsymbol{C}'\boldsymbol{C},\qquad\boldsymbol{A}^{-1}=\boldsymbol{C}^{-1}\boldsymbol{I}(\boldsymbol{C}^{-1})'
-		$$
-		即$\boldsymbol{A}^{-1}\backsimeq\boldsymbol{I}$得$\boldsymbol{A}^{-1}$是正定的.\\
-		$$
+		存在实矩阵$\CC$,使得
+		\begin{equation}\AA=\CC'\CC,\qquad\AA^{-1}=\CC^{-1}\II(\CC^{-1})'
+		\end{equation}
+		即$\AA^{-1}\backsimeq\II$得$\AA^{-1}$是正定的.\\
+		\begin{equation}
 		\begin{aligned}
-		\boldsymbol{A}^*&=|\boldsymbol{A}|\boldsymbol{A}^{-1}\\
-		&=|\boldsymbol{A}|\boldsymbol{C}^{-1}\boldsymbol{I}(\boldsymbol{C}^{-1})'\\
-		&=(\sqrt{|\boldsymbol{A}|}\boldsymbol{C}^{-1})'\boldsymbol{I}(\sqrt{|\boldsymbol{A}|}\boldsymbol{C}^{-1})'
+		\AA^*&=|\AA|\AA^{-1}\\
+		&=|\AA|\CC^{-1}\II(\CC^{-1})'\\
+		&=(\sqrt{|\AA|}\CC^{-1})'\II(\sqrt{|\AA|}\CC^{-1})'
 		\end{aligned}
-		$$
-		即$\boldsymbol{A}\backsimeq\boldsymbol{I}$
+		\end{equation}
+		即$\AA\backsimeq\II$
 	\end{proof}
 	\begin{exercise}
-		设$n$阶方阵$\boldsymbol{A}$满足条件$\boldsymbol{A}'\boldsymbol{A}=\boldsymbol{E}$,其中$\boldsymbol{A}'$是$\boldsymbol{A}$的转置矩阵，$\boldsymbol{E}$为单位矩阵，证明$\boldsymbol{A}$的实特征向量所对应的特征值的绝对值等于1.
+		设$n$阶方阵$\AA$满足条件$\AA'\AA=\boldsymbol{E}$,其中$\AA'$是$\AA$的转置矩阵，$\boldsymbol{E}$为单位矩阵，证明$\AA$的实特征向量所对应的特征值的绝对值等于1.
 	\end{exercise}
 	\begin{proof}
-		已知$\boldsymbol{A}'=\boldsymbol{A}^{-1}$\\
-		由于$|\lambda\boldsymbol{I}|=|(\lambda\boldsymbol{I}-\boldsymbol{A})'|=|\lambda\boldsymbol{I}-\boldsymbol{A}'|=|\lambda\boldsymbol{I}-\boldsymbol{A}^{-1}|=|\boldsymbol{A}^{-1}||\lambda\boldsymbol{I}-\boldsymbol{A}|=$
-		$$
-		\frac{1}{|\boldsymbol{A}|}\frac{1}{\lambda}(-1)^n|\lambda\boldsymbol{I}-\boldsymbol{A}|
-		$$
-		所以$\frac{1}{|\boldsymbol{A}|}\frac{1}{\lambda}(-1)^n=1$,而$|\boldsymbol{AA}'|=|\boldsymbol{A}|^2=1,$所以$|\lambda|=1$
+		已知$\AA'=\AA^{-1}$\\
+		由于$|\lambda\II|=|(\lambda\II-\AA)'|=|\lambda\II-\AA'|=|\lambda\II-\AA^{-1}|=|\AA^{-1}||\lambda\II-\AA|=$
+		\begin{equation}
+		\frac{1}{|\AA|}\frac{1}{\lambda}(-1)^n|\lambda\II-\AA|
+		\end{equation}
+		所以$\frac{1}{|\AA|}\frac{1}{\lambda}(-1)^n=1$,而$|\boldsymbol{AA}'|=|\AA|^2=1,$所以$|\lambda|=1$
 	\end{proof}
 	\begin{exercise}
-		设$f(x_1,\cdots,x_n)=\boldsymbol{X}^T\boldsymbol{AX}$是一实二次型,若存在n维实向量
-		$$
-		\boldsymbol{X}_1,\boldsymbol{X}_2,s.t.,\boldsymbol{X}_1^T\boldsymbol{AX}_1>0,\boldsymbol{X}_2^T\boldsymbol{AX}_2<0,
-		$$
-		证明:存在$n$维实向量$\boldsymbol{a},s.t.,\boldsymbol{a}'\boldsymbol{A}\boldsymbol{a}=0.$
+		设$f(x_1,\cdots,x_n)=\XX^T\boldsymbol{AX}$是一实二次型,若存在n维实向量
+		\begin{equation}
+		\XX_1,\XX_2,s.t.,\XX_1^T\boldsymbol{AX}_1>0,\XX_2^T\boldsymbol{AX}_2<0,
+		\end{equation}
+		证明:存在$n$维实向量$\AA,s.t.,\AA'\AA\AA=0.$
 	\end{exercise}
 	\begin{proof}
-		设$\boldsymbol{A}$的秩为$r$,作实非退化线性替换$\boldsymbol{X}=\boldsymbol{CY}$,将$f$化为规范形
-		$$
-		f(x_1,\cdots,x_n)=\boldsymbol{X}'\boldsymbol{AX}=y_1^2+\cdots+y_p^2-y^2_{p+1}-\cdots-y^2_{p+q}(r=p+q)
-		$$
-		由于存在两个向量$\boldsymbol{X}_1,\boldsymbol{X}_2$,使$\boldsymbol{X}'_1\boldsymbol{AX}_1>0,\boldsymbol{X}'_2\boldsymbol{AX}_2<0$,,从而可得$p>0,q>0$.\\
+		设$\AA$的秩为$r$,作实非退化线性替换$\XX=\boldsymbol{CY}$,将$f$化为规范形
+		\begin{equation}
+		f(x_1,\cdots,x_n)=\XX'\boldsymbol{AX}=y_1^2+\cdots+y_p^2-y^2_{p+1}-\cdots-y^2_{p+q}(r=p+q)
+		\end{equation}
+		由于存在两个向量$\XX_1,\XX_2$,使$\XX'_1\boldsymbol{AX}_1>0,\XX'_2\boldsymbol{AX}_2<0$,,从而可得$p>0,q>0$.\\
 		令
-		$$
+		\begin{equation}
 		y_1=y_{p+1}=1,y_2=\cdots=y_p=y_{p+2}=\cdots=y_{p+q}=0,
-		$$
+		\end{equation}
 		取$n$维列向量
-		$$
-		\boldsymbol{X}_0=\boldsymbol{C}
+		\begin{equation}
+		\XX_0=\CC
 		\begin{bmatrix}
 		1\\0\\\vdots\\0\\1\\0\\\vdots\\0
 		\end{bmatrix}
-		$$
+		\end{equation}
 		中间的1位于第$p+1$行.\\
-		由于$\boldsymbol{X}=\boldsymbol{CY}$非退化,故$\boldsymbol{X}_0\ne\boldsymbol{0}$,且有
-		$$
-		\boldsymbol{X}'_0\boldsymbol{AX}_0=0
-		$$
+		由于$\XX=\boldsymbol{CY}$非退化,故$\XX_0\ne\boldsymbol{0}$,且有
+		\begin{equation}
+		\XX'_0\boldsymbol{AX}_0=0
+		\end{equation}
 	\end{proof}
 	\begin{exercise}
-		设$\boldsymbol{A}$是$n$阶实对称矩阵,证明:
-		$$
-		\exists c>0,s.t., \forall \boldsymbol{X}\in \boldsymbol{R}^n,|\boldsymbol{X}^T\boldsymbol{A}\boldsymbol{X}|\leq c\boldsymbol{X}^T\boldsymbol{X}.
-		$$
+		设$\AA$是$n$阶实对称矩阵,证明:
+		\begin{equation}
+		\exists c>0,s.t., \forall \XX\in \boldsymbol{R}^n,|\XX^T\AA\XX|\leq c\XX^T\XX.
+		\end{equation}
 	\end{exercise}
 	\begin{proof}
-		设$\boldsymbol{A}$的全部特征值是$\lambda_1,\cdots,\lambda_n$.则$t\boldsymbol{I}+\boldsymbol{A}$的全部特征值为$t+\lambda_1,\cdots,t+\lambda_n$,当$t>S_r(\boldsymbol{A})$时.
-		$$
-		t+\lambda_i\geq t-|\lambda_i|\geq t-S_r(\boldsymbol{A})>0,\;i=1,\cdots,n.
-		$$
-		即$t\boldsymbol{I}+\boldsymbol{A}$为正定矩阵.同理$t\boldsymbol{I}-\boldsymbol{A}$也为正交矩阵.\\
-		任意一个实n阶向量$\boldsymbol{X}$,都有.
-		$$
-		\boldsymbol{X}'(c\boldsymbol{I}+\boldsymbol{A})\boldsymbol{X}\geqslant 0,\;\boldsymbol{X}'(c\boldsymbol{I}-\boldsymbol{A})\geqslant 0
-		$$
-		$$
-		-c\boldsymbol{X}'\boldsymbol{X}\leqslant \boldsymbol{X}'\boldsymbol{AX}\leqslant c\boldsymbol{X}'\boldsymbol{X}
-		$$
-		即$$|\boldsymbol{X}'\boldsymbol{AX}|\leqslant c\boldsymbol{X}'\boldsymbol{X}$$
+		设$\AA$的全部特征值是$\lambda_1,\cdots,\lambda_n$.则$t\II+\AA$的全部特征值为$t+\lambda_1,\cdots,t+\lambda_n$,当$t>S_r(\AA)$时.
+		\begin{equation}
+		t+\lambda_i\geq t-|\lambda_i|\geq t-S_r(\AA)>0,\;i=1,\cdots,n.
+		\end{equation}
+		即$t\II+\AA$为正定矩阵.同理$t\II-\AA$也为正交矩阵.\\
+		任意一个实n阶向量$\XX$,都有.
+		\begin{equation}
+		\XX'(c\II+\AA)\XX\geqslant 0,\;\XX'(c\II-\AA)\geqslant 0
+		\end{equation}
+		\begin{equation}
+		-c\XX'\XX\leqslant \XX'\boldsymbol{AX}\leqslant c\XX'\XX
+		\end{equation}
+		即
+		\begin{equation}
+		|\XX'\boldsymbol{AX}|\leqslant c\XX'\XX
+		\end{equation}
 	\end{proof}
 	\begin{exercise}
 		(1)证明:如果${\displaystyle \sum^n_{i=1}\sum^n_{j=1}}a_{ij}x_ix_j(a_{ij}=a_{ji})$是正定二次型.那么
-		$$
+		\begin{equation}
 		f(y_1,\dots,y_n)=
 		\begin{bmatrix}
 		a_{11}&a_{12}&\cdots&a_{1n}&y_1\\
@@ -405,9 +438,9 @@
 		a_{n1}&a_{n2}&\cdots&a_{nn}&y_n\\
 		y_1&y_2&\cdots&y_n&0
 		\end{bmatrix}
-		$$
+		\end{equation}
 		是负定二次型;\\
-		(2)如果$\boldsymbol{A}=
+		(2)如果$\AA=
 		\begin{bmatrix}
 		a_{11}&a_{12}&\cdots&a_{1n}\\
 		a_{21}&a_{22}&\cdots&a_{2n}\\
@@ -415,15 +448,15 @@
 		a_{n1}&a_{n2}&\cdots&a_{nn}
 		\end{bmatrix}
 		$是正定矩阵,那么
-		$$
-		|\boldsymbol{A}|\leq a_{nn}\boldsymbol{P}_{n-1},
-		$$
-		其中$\boldsymbol{P}_{n-1}$是$\boldsymbol{A}$的n-1阶顺序主子式;\\
-		(3)$|\boldsymbol{A}|\leq a_{11}a_{22}\cdots a_{nn}.$
+		\begin{equation}
+		|\AA|\leq a_{nn}\PP_{n-1},
+		\end{equation}
+		其中$\PP_{n-1}$是$\AA$的n-1阶顺序主子式;\\
+		(3)$|\AA|\leq a_{11}a_{22}\cdots a_{nn}.$
 	\end{exercise}
 		\begin{proof}
-		(1)作变换$\boldsymbol{Y}=\boldsymbol{AZ}$即
-		$$
+		(1)作变换$\YY=\boldsymbol{AZ}$即
+		\begin{equation}
 		\begin{bmatrix}
 		y_1\\\vdots\\y_n
 		\end{bmatrix}
@@ -436,9 +469,9 @@
 		\begin{bmatrix}
 		z_1\\\vdots\\z_n
 		\end{bmatrix}
-		$$
+		\end{equation}
 		则
-		$$
+		\begin{equation}
 		\begin{aligned}
 		f(y_1,\cdots,y_n)&=
 		\begin{vmatrix}
@@ -454,15 +487,15 @@
 		a_{n1}&\cdots&a_{nn}&0\\
 		y_1&\cdots&y_n&-(y_1z_1+\cdots y_nz_n)
 		\end{vmatrix}\\
-		&=-|\boldsymbol{A}|(y_1z_1+\cdots y_nz_n)\\
-		&=-|\boldsymbol{A}|\boldsymbol{Y}'\boldsymbol{Z}=-|\boldsymbol{A}|\boldsymbol{Z}'\boldsymbol{AZ}
+		&=-|\AA|(y_1z_1+\cdots y_nz_n)\\
+		&=-|\AA|\YY'\boldsymbol{Z}=-|\AA|\boldsymbol{Z}'\boldsymbol{AZ}
 		\end{aligned}
-		$$
-		由$\boldsymbol{A}$为正定矩阵知,$f(y_1,y_2,\cdots,y_{n-1})$为负定二次型.\\
+		\end{equation}
+		由$\AA$为正定矩阵知,$f(y_1,y_2,\cdots,y_{n-1})$为负定二次型.\\
 	\end{proof}
 	\begin{proof}
 		(2)记
-		$$
+		\begin{equation}
 		g'(y_1,y_2,\cdots,y_n)=
 		\begin{vmatrix}
 		a_{11}&a_{12}&\cdots&a_{1,n-1}&y_1\\
@@ -471,87 +504,90 @@
 		a_{n1}&a_{n2}&\cdots&a_{n,n-1}&y_n\\
 		y_1&y_2&\cdots&y_{n-1}&0
 		\end{vmatrix}
-		$$
+		\end{equation}
 		由(1)可知,$g'(y_1,y_2,\cdots,y_{n-1})$负定
-		$$
-		|\boldsymbol{A}|=g'(a_{n1},\cdots,a_{n,n-1})+a_{nn}\boldsymbol{P}_{n-1}
-		$$
-		由于$g'(a_{n1},\cdots,a_{n,n-1})<0$,所以$|\boldsymbol{A}|\leq a_{nn}\boldsymbol{\cdot P}_{n-1}$.
+		\begin{equation}
+		|\AA|=g'(a_{n1},\cdots,a_{n,n-1})+a_{nn}\PP_{n-1}
+		\end{equation}
+		由于$g'(a_{n1},\cdots,a_{n,n-1})<0$,所以$|\AA|\leq a_{nn}\boldsymbol{\cdot P}_{n-1}$.
 	\end{proof}
 	\begin{proof}
 		(3)由(2),得
-		$$
-		|\boldsymbol{A}|\leq a_{nn},|\boldsymbol{P}_{n-1}|\leq a_{nn}a_{n-1,n-1},|\boldsymbol{P}_{n-2}|\leq \cdots\leq a_{nn}a_{n-1,n-1}\cdots a_{11}
-		$$
+		\begin{equation}
+		|\AA|\leq a_{nn},|\PP_{n-1}|\leq a_{nn}a_{n-1,n-1},|\PP_{n-2}|\leq \cdots\leq a_{nn}a_{n-1,n-1}\cdots a_{11}
+		\end{equation}
 	\end{proof}
 	\begin{exercise}
-		设$\boldsymbol{A},\boldsymbol{B}$都是$n\times n$实对称矩阵，且$\boldsymbol{A}$正定,\\
-		(1)证明:存在实可逆矩阵$\boldsymbol{T}$，使得$\boldsymbol{T}'(\boldsymbol{A}+\boldsymbol{B})\boldsymbol{T}$为对角矩阵;\\
-		(2)假设$\boldsymbol{B}$也正定.证明:$|\boldsymbol{A}+\boldsymbol{B}|\geq|\boldsymbol{A}|+|\boldsymbol{B}|.$\\
-		(3)假设$\boldsymbol{B}$也正定,且$\boldsymbol{A}\boldsymbol{B}=\boldsymbol{B}\boldsymbol{A}$,证明$\boldsymbol{A}\boldsymbol{B}$也是正定矩阵.
+		设$\AA,\BB$都是$n\times n$实对称矩阵，且$\AA$正定,\\
+		(1)证明:存在实可逆矩阵$\TT$，使得$\TT'(\AA+\BB)\TT$为对角矩阵;\\
+		(2)假设$\BB$也正定.证明:$|\AA+\BB|\geq|\AA|+|\BB|.$\\
+		(3)假设$\BB$也正定,且$\AA\BB=\BB\AA$,证明$\AA\BB$也是正定矩阵.
 	\end{exercise}
 	\begin{proof}
 		(1)\\
-		$\boldsymbol{A}$正定,所以存在正交矩阵$\boldsymbol{P}^{-1}=\boldsymbol{P'}$使得,
-		$$
-		\boldsymbol{P}'\boldsymbol{AP}=diag(a_1,\cdots,a_n),
-		$$
-		$a_1,\cdots,a_n>0$为$\boldsymbol{A}$的特征值.\\
-		$\boldsymbol{P}'\boldsymbol{BP}=\boldsymbol{P}^{-1}\boldsymbol{BP}$也是对称矩阵,且与$\boldsymbol{B}$有相同的特征值.所以存在正交矩阵$\boldsymbol{Q}^{-1}=\boldsymbol{Q}'$使得,
-		$$
-		\boldsymbol{Q}'(\boldsymbol{P}'\boldsymbol{BP})\boldsymbol{Q}=\boldsymbol{Q^{-1}}(\boldsymbol{P}^{-1}\boldsymbol{BP})\boldsymbol{Q}=diag(b_1,\cdots,b_n),
-		$$
-		其中$b_1,\cdots,b_n$为$\boldsymbol{B}$的特征值.所以:
-		$$
-		\boldsymbol{Q}'(\boldsymbol{P}'(\boldsymbol{A}+\boldsymbol{B})\boldsymbol{P})\boldsymbol{Q}=\boldsymbol{Q}^{-1}(\boldsymbol{P}^{-1}(\boldsymbol{A}+\boldsymbol{B})\boldsymbol{P})\boldsymbol{Q}=diag(a_1+b_1,\cdots,a_n+b_n).
-		$$
-		所以存在实可逆矩阵$\boldsymbol{T}=\boldsymbol{PQ}$,使得$\boldsymbol{T}'(\boldsymbol{A}+\boldsymbol{B})\boldsymbol{T}$为对角矩阵.
+		$\AA$正定,所以存在正交矩阵$\PP^{-1}=\boldsymbol{P'}$使得,
+		\begin{equation}
+		\PP'\boldsymbol{AP}=diag\left(a_1,\cdots,a_n\right),
+		\end{equation}
+		$a_1,\cdots,a_n>0$为$\AA$的特征值.\\
+		$\PP'\boldsymbol{BP}=\PP^{-1}\boldsymbol{BP}$也是对称矩阵,且与$\BB$有相同的特征值.所以存在正交矩阵$\QQ^{-1}=\QQ'$使得,
+		\begin{equation}
+		\QQ'(\PP'\boldsymbol{BP})\QQ=\boldsymbol{Q^{-1}}(\PP^{-1}\boldsymbol{BP})\QQ=diag\left(b_1,\cdots,b_n\right),
+		\end{equation}
+		其中$b_1,\cdots,b_n$为$\BB$的特征值.所以:
+		\begin{equation}
+		\QQ'(\PP'(\AA+\BB)\PP)\QQ=\QQ^{-1}(\PP^{-1}(\AA+\BB)\PP)\QQ=diag\left(a_1+b_1,\cdots,a_n+b_n\right).
+		\end{equation}
+		所以存在实可逆矩阵$\TT=\boldsymbol{PQ}$,使得$\TT'(\AA+\BB)\TT$为对角矩阵.
 	\end{proof}
 	\begin{proof}
 		(2)\\
-		$\boldsymbol{B}$也正定,因此$b_1,\cdots,b_n>0$.
+		$\BB$也正定,因此$b_1,\cdots,b_n>0$.
 		\begin{align*}
-			|\boldsymbol{Q}'(\boldsymbol{P}'(\boldsymbol{A}+\boldsymbol{B})\boldsymbol{P})\boldsymbol{Q}|
+			|\QQ'(\PP'(\AA+\BB)\PP)\QQ|
 			&=|diag(a_1+b_1,\cdots,a_n+b_n)|\\
 			&=\prod_{i=1}^{n}(a_i+b_i)\\
 			&>\prod_{i=1}^{n}a_i+\prod_{i=1}^{n}b_i\\
-			&=|\boldsymbol{P}^{-1}\boldsymbol{AP}|+|\boldsymbol{P}^{-1}\boldsymbol{BP}|=|\boldsymbol{A}|+|\boldsymbol{B}|.
+			&=|\PP^{-1}\boldsymbol{AP}|+|\PP^{-1}\boldsymbol{BP}|=|\AA|+|\BB|.
 			\end{align*}
-			$$
-			\Rightarrow|\boldsymbol{A}+\boldsymbol{B}|\ge|\boldsymbol{A}|+|\boldsymbol{B}|.
-			$$
+			\begin{equation}
+			\Rightarrow|\AA+\BB|\ge|\AA|+|\BB|.
+			\end{equation}
 	\end{proof}
 	\begin{proof}
-		(3)存在一个n级正交矩阵$\boldsymbol{T},s.t.$
-		$$
-		\boldsymbol{T}'\boldsymbol{AT}=diag\{\lambda_1,\cdots,\lambda_n\}\quad\boldsymbol{T}'\boldsymbol{BT}=diag\{\mu_1,\cdots,\mu_n\}.
-		$$
-		其中$\lambda_1,\cdots,\lambda_n$是$\boldsymbol{A}$的全部特征值,$\mu_1,\cdots,\mu_n$是$\boldsymbol{B}$的全部特征值.$\boldsymbol{A},\boldsymbol{B}$都是正定矩阵,由于:
-		$$
-		\boldsymbol{T}'(\boldsymbol{AB})\boldsymbol{T}=(\boldsymbol{T}'\boldsymbol{AT})(\boldsymbol{T}'\boldsymbol{BT})=diag\{\lambda_1\mu_1,\cdots,\lambda_n\mu_n \}
-		$$
+		(3)存在一个n级正交矩阵$\TT,s.t.$
+		\begin{equation}
+		\TT'\boldsymbol{AT}=diag\{\lambda_1,\cdots,\lambda_n\}\quad\TT'\boldsymbol{BT}=diag\{\mu_1,\cdots,\mu_n\}.
+		\end{equation}
+		其中$\lambda_1,\cdots,\lambda_n$是$\AA$的全部特征值,$\mu_1,\cdots,\mu_n$是$\BB$的全部特征值.$\AA,\BB$都是正定矩阵,由于:
+		\begin{equation}
+		\TT'(\boldsymbol{AB})\TT=(\TT'\boldsymbol{AT})(\TT'\boldsymbol{BT})=diag\{\lambda_1\mu_1,\cdots,\lambda_n\mu_n \}
+		\end{equation}
 		即$\boldsymbol{AB}$合同与$diag\{\lambda_1\mu_1,\cdots,\lambda_n\mu_n \}$,所以$\boldsymbol{AB}$是正定矩阵.
 	\end{proof}
 	\begin{exercise}
 		化二次型
-		$$
+		\begin{equation}
 		f(x_1,x_2,x_3)=2x_1^2+4x_1x_2-4x_1x_3+5x_2^2-8x_2x_3+5x_3^2
-		$$
+		\end{equation}
 		为标准型并写出线性变换.
 	\end{exercise}
 	\begin{proof}
-		二次型f的矩阵$\boldsymbol{A}$,以及$\boldsymbol{A}$的全部特征值以及特征向量为:
-		$$
-		\boldsymbol{A}=
+		二次型f的矩阵$\AA$,以及$\AA$的全部特征值以及特征向量为:
+		\begin{equation}
+		\AA=
 		\begin{bmatrix}
 		2&2&-2\\
 		2&5&-4\\
 		-2&-4&5
 		\end{bmatrix};
-		$$
-		$\lambda_1,\lambda_2,\lambda_3$的特征值分别为10,1,1特征向量分别为$$\boldsymbol{v}_1=\begin{bmatrix}-1\\-2\\2\end{bmatrix}\;\boldsymbol{v}_2=\begin{bmatrix}2\\0\\1\end{bmatrix}\;\boldsymbol{v}_3=\begin{bmatrix}-2\\1\\0\end{bmatrix}$$
+		\end{equation}
+		$\lambda_1,\lambda_2,\lambda_3$的特征值分别为10,1,1特征向量分别为
+		\begin{equation}
+		\boldsymbol{v}_1=\begin{bmatrix}-1\\-2\\2\end{bmatrix}\;\boldsymbol{v}_2=\begin{bmatrix}2\\0\\1\end{bmatrix}\;\boldsymbol{v}_3=\begin{bmatrix}-2\\1\\0\end{bmatrix}
+		\end{equation}
 		将$\boldsymbol{v}_1,\boldsymbol{v}_2,\boldsymbol{v}_3$正交化,单位化得$\boldsymbol{\beta}_1,\boldsymbol{\beta}_2,\boldsymbol{\beta}_3$:
-		$$
+		\begin{equation}
 		\boldsymbol{\beta}_1=
 		\begin{bmatrix}
 		-\frac{1}{3}\\-\frac{2}{3}\\\frac{2}{3}
@@ -564,94 +600,102 @@
 		\begin{bmatrix}
 		-\frac{2}{3\sqrt{5}}\\\frac{5}{3\sqrt{5}}\\\frac{4}{3\sqrt{5}}
 		\end{bmatrix}
-		$$
+		\end{equation}
 		即
-		$$
-		\boldsymbol{T}=
+		\begin{equation}
+		\TT=
 		\begin{bmatrix}
 		-\frac{1}{3}&\frac{2}{\sqrt{5}}&-\frac{2}{3\sqrt{5}}\\
 		-\frac{2}{3}&0&\frac{5}{3\sqrt{5}}\\
 		\frac{2}{3}&\frac{1}{\sqrt{5}}&\frac{4}{3\sqrt{5}}
 		\end{bmatrix}
-		\qquad\boldsymbol{T}'\boldsymbol{AT}=\boldsymbol{D}=diag(10,1,1);
-		$$
+		\qquad\TT'\boldsymbol{AT}=\DD=diag\left(10,1,1\right);
+		\end{equation}
 		令
-		$$
+		\begin{equation}
 		\begin{bmatrix}
 		x_1\\x_2\\x_3
 		\end{bmatrix}
 		=
-		\boldsymbol{T}
+		\TT
 		\begin{bmatrix}
 		y_1\\y_2\\y_3\
 		\end{bmatrix}.
-		$$
+		\end{equation}
 		则
-		$$f(y_1,y_2,y_3)=10y_1^2+y_2^2+y_3^2.$$
+		\begin{equation}
+		f(y_1,y_2,y_3)=10y_1^2+y_2^2+y_3^2.
+		\end{equation}
 	\end{proof}
 	\begin{exercise}
 		设二次型
-		$$
+		\begin{equation}
 		f(x_1,x_2,x_3)=ax_1^2+ax_2^2+(a-1)x_3^2+2x_1x_3-2x_2x_3.
-		$$
+		\end{equation}
 		(1)求二次型$f$的矩阵的所有特征值;\\
 		(2)若二次型的规范性为$y_1^2+y_2^2$,求a的值和各特征值的一个特征向量.
 	\end{exercise}
 	\begin{proof}
-		(1)二次型的矩阵$\boldsymbol{A}$为:
-		$$
-		\boldsymbol{A}=
+		(1)二次型的矩阵$\AA$为:
+		\begin{equation}
+		\AA=
 		\begin{bmatrix}
 		a&0&1\\
 		0&a&-1\\
 		1&-1&a-1
 		\end{bmatrix}\;
-		|\lambda\boldsymbol{I}-\boldsymbol{A}|=
+		|\lambda\II-\AA|=
 		\begin{vmatrix}
 		\lambda-a&0&-1\\
 		0&\lambda-a&1\\
 		-1&1&\lambda-(a-1)
 		\end{vmatrix}
-		$$
-		解得$\lambda_1,\lambda_2,\lambda_3$的特征值分别为$a-2,a,a+1$,特征向量分别为$$\boldsymbol{v}_1=\begin{bmatrix}-1\\1\\2\end{bmatrix},\;\boldsymbol{v}_2=\begin{bmatrix}1\\1\\0\end{bmatrix},\;\boldsymbol{v}_3=\begin{bmatrix}1\\-1\\1\end{bmatrix}.$$
+		\end{equation}
+		解得$\lambda_1,\lambda_2,\lambda_3$的特征值分别为$a-2,a,a+1$,特征向量分别为
+		\begin{equation}
+		\boldsymbol{v}_1=\begin{bmatrix}-1\\1\\2\end{bmatrix},\;\boldsymbol{v}_2=\begin{bmatrix}1\\1\\0\end{bmatrix},\;\boldsymbol{v}_3=\begin{bmatrix}1\\-1\\1\end{bmatrix}.
+		\end{equation}
 	\end{proof}
 	\begin{proof}
 		(2)若规范性为$y_1^2+y_2^2,a$只能为$2$,即:\\
-		$\lambda_1,\lambda_2,\lambda_3$的特征值分别为$0,2,3$,特征向量分别为$$\boldsymbol{v}_1=\begin{bmatrix}-1\\1\\2\end{bmatrix},\;\boldsymbol{v}_2=\begin{bmatrix}1\\1\\0\end{bmatrix},\;\boldsymbol{v}_3=\begin{bmatrix}1\\-1\\1\end{bmatrix}.$$
+		$\lambda_1,\lambda_2,\lambda_3$的特征值分别为$0,2,3$,特征向量分别为
+		\begin{equation}
+		\boldsymbol{v}_1=\begin{bmatrix}-1\\1\\2\end{bmatrix},\;\boldsymbol{v}_2=\begin{bmatrix}1\\1\\0\end{bmatrix},\;\boldsymbol{v}_3=\begin{bmatrix}1\\-1\\1\end{bmatrix}.
+		\end{equation}
 	\end{proof}
 	\begin{exercise}
-		若$n\times n$矩阵$\boldsymbol{A}$可逆,\\
-		(1)证明$\boldsymbol{A}'\boldsymbol{A}$正定.\\
-		(2)证明:存在正交矩阵$\boldsymbol{P},\boldsymbol{Q}$，使得
-		$$
-		\boldsymbol{P}'\boldsymbol{AQ}=diag(a_1,\cdots,a_n),where \; a_i>0,i=1,\cdots,n.
-		$$
+		若$n\times n$矩阵$\AA$可逆,\\
+		(1)证明$\AA'\AA$正定.\\
+		(2)证明:存在正交矩阵$\PP,\QQ$，使得
+		\begin{equation}
+		\PP'\boldsymbol{AQ}=diag\left(a_1,\cdots,a_n\right),where \; a_i>0,i=1,\cdots,n.
+		\end{equation}
 	\end{exercise}
 	\begin{proof}
 		(1)
-		$$
-		\boldsymbol{A}'\boldsymbol{A}=\boldsymbol{A}'\boldsymbol{IA}
-		$$
-		因此$\boldsymbol{A}'\boldsymbol{A}$合同与单位矩阵,即$\boldsymbol{A}'\boldsymbol{A}$正定.
+		\begin{equation}
+		\AA'\AA=\AA'\boldsymbol{IA}
+		\end{equation}
+		因此$\AA'\AA$合同与单位矩阵,即$\AA'\AA$正定.
 	\end{proof}
 	\begin{proof}
 		(2)
-		$\boldsymbol{A}'\boldsymbol{A}$正定,因此存在正交矩阵$\boldsymbol{P}$,使得
-		$$
-		\boldsymbol{P}'\boldsymbol{A}'\boldsymbol{AP}=diag(b_1,\cdots,b_n),where\;b_i>0,i=0,\cdots,n.
-		$$
+		$\AA'\AA$正定,因此存在正交矩阵$\PP$,使得
+		\begin{equation}
+		\PP'\AA'\boldsymbol{AP}=diag(b_1,\cdots,b_n),where\;b_i>0,i=0,\cdots,n.
+		\end{equation}
 		令
-		$$
-		\boldsymbol{D}=diag(\sqrt{b_1},\cdots,\sqrt{b_n}),\;\boldsymbol{Q}=\boldsymbol{A}'\boldsymbol{PD},
-		$$
+		\begin{equation}
+		\DD=diag\left(\sqrt{b_1},\cdots,\sqrt{b_n}\right),\;\QQ=\AA'\boldsymbol{PD},
+		\end{equation}
 		容易求得
-		$$
-		\boldsymbol{Q}'\boldsymbol{Q}=(\boldsymbol{A}'\boldsymbol{PD})'\boldsymbol{A}'\boldsymbol{PD}=\boldsymbol{I}_n,
-		$$
-		因此矩阵$\boldsymbol{Q}$为正交矩阵,令$a_i=\sqrt{b_i},i=1\cdots,n.$则
-		$$
-		\boldsymbol{P}'\boldsymbol{AQ}=\boldsymbol{D}=diag(a_1,\cdots,a_n).
-		$$
+		\begin{equation}
+		\QQ'\QQ=(\AA'\boldsymbol{PD})'\AA'\boldsymbol{PD}=\II_n,
+		\end{equation}
+		因此矩阵$\QQ$为正交矩阵,令$a_i=\sqrt{b_i},i=1\cdots,n.$则
+		\begin{equation}
+		\PP'\boldsymbol{AQ}=\DD=diag\left(a_1,\cdots,a_n\right).
+		\end{equation}
 	\end{proof}
 	\begin{exercise}
 		求线性方程组
@@ -665,8 +709,8 @@
 	\end{exercise}
 	\begin{proof}
 		系数矩阵作初等行变换得:
-		$$
-		\boldsymbol{A}=
+		\begin{equation}
+		\AA=
 		\begin{bmatrix}
 		2&1&3&-1\\
 		3&2&0&-2\\
@@ -678,9 +722,9 @@
 		0&1&-9&-1\\
 		0&0&0&0
 		\end{bmatrix}
-		$$
+		\end{equation}
 		因此,方程组的两个线性无关的向量为:
-		$$
+		\begin{equation}
 		\boldsymbol{\alpha}_1=
 		\begin{bmatrix}
 		0\\1\\0\\1
@@ -689,17 +733,17 @@
 		\begin{bmatrix}
 		-6\\9\\1\\0
 		\end{bmatrix}.
-		$$
+		\end{equation}
 		$W=L(\boldsymbol{\alpha}_1,\boldsymbol{\alpha}_2)$.
 		设正交补空间$W^\perp$的任一向量为$\boldsymbol{\beta}=(y_1,y_2,y_3,y_4)'$.则$\boldsymbol{\alpha}_1'\boldsymbol{\beta}=\boldsymbol{\alpha}_2'\boldsymbol{\beta}=0$.即
-		$$
+		\begin{equation}
 		\begin{cases}
 		y_2+y_4=0\\
 		-6y_1+9y_2+y_3=0
 		\end{cases}
-		$$
+		\end{equation}
 		因此,上面的方程组的两个线性无关的向量为:
-		$$
+		\begin{equation}
 		\boldsymbol{\beta}_1=
 		\begin{bmatrix}
 		1\\0\\6\\0
@@ -708,7 +752,7 @@
 		\begin{bmatrix}
 		-3\\-2\\0\\2
 		\end{bmatrix}.
-		$$
+		\end{equation}
 		所以,正交补空间$W^\perp=L(\boldsymbol{\beta}_1,\boldsymbol{\beta}_2)$.
 	\end{proof}
 	\begin{exercise}
@@ -717,9 +761,9 @@
 	\begin{proof}
 		已知$\boldsymbol{\alpha}\in W,\sigma(\boldsymbol{\alpha})\in W$.\\
 		设$\sigma(\boldsymbol{\alpha})=\boldsymbol{\beta}$,因$\sigma$可逆,即若:
-		$$
+		\begin{equation}
 		\sigma^{-1}(\boldsymbol{\beta})=\boldsymbol{\alpha}\qquad\boldsymbol{\beta}\;and\;\sigma^{-1}(\boldsymbol{\beta})\in W
-		$$
+		\end{equation}
 		所以$W$是$V$中$\sigma^{-1}-$不变子空间
 	\end{proof}
 	下证$\sigma$为双射:
@@ -733,77 +777,77 @@
 		设$\sigma$是正交变换,证明:$\sigma$的不变子空间的正交补也是$\sigma$的不变子空间.
 	\end{exercise}
 	\begin{proof}
-		设$W$是$\sigma$的任意一个不变子空间,取$W$的一组标准正交基$\epsilon_1,\cdots,\epsilon_n$,把它扩成$V$的一组标准正交基$\epsilon_1,\cdots,\epsilon_m,\epsilon_{m+1},\cdots,\epsilon_n$,由
-		$$
+		设$W$是$\sigma$的任意一个不变子空间,取$W$的一组标准正交基$\varep_1,\cdots,\varep_n$,把它扩成$V$的一组标准正交基$\varep_1,\cdots,\varep_m,\varep_{m+1},\cdots,\varep_n$,由
+		\begin{equation}
 		dim(W)+dim(W^\perp)=n
-		$$
-		$$
-		W=L(\epsilon_1,\cdots,\epsilon_m),\;W^\perp=L(\epsilon_{m+1},\cdots,\epsilon_n).
-		$$
-		又$\sigma$是正交变换,则$\sigma(\epsilon_1),\cdots,\sigma(\epsilon_n)$也是标准正交基,由于$W$是$\sigma$的不变子空间,所以$\sigma(\epsilon_1),\cdots,\sigma(\epsilon_m)\in W$.且为$W$的一组标准正交基,从而$\sigma(\epsilon_{m+1},\cdots,\sigma(\epsilon_n))\in W^\perp$\\
+		\end{equation}
+		\begin{equation}
+		W=L(\varep_1,\cdots,\varep_m),\;W^\perp=L(\varep_{m+1},\cdots,\varep_n).
+		\end{equation}
+		又$\sigma$是正交变换,则$\sigma(\varep_1),\cdots,\sigma(\varep_n)$也是标准正交基,由于$W$是$\sigma$的不变子空间,所以$\sigma(\varep_1),\cdots,\sigma(\varep_m)\in W$.且为$W$的一组标准正交基,从而$\sigma(\varep_{m+1},\cdots,\sigma(\varep_n))\in W^\perp$\\
 		任取$\alpha\in W^\perp$则
-		$$
-		\alpha=k_{m+1}\epsilon_{m+1}+\cdots+k_n\epsilon_n\in W^\perp,
-		$$
+		\begin{equation}
+		\alpha=k_{m+1}\varep_{m+1}+\cdots+k_n\varep_n\in W^\perp,
+		\end{equation}
 		所以
-		$$
-		\sigma(\alpha)=k_{m+1}\epsilon_{m+1}+\cdots+k_n\sigma(\epsilon_n)\in W^\perp.
-		$$
+		\begin{equation}
+		\sigma(\alpha)=k_{m+1}\varep_{m+1}+\cdots+k_n\sigma(\varep_n)\in W^\perp.
+		\end{equation}
 		$W^\perp$是$\sigma$的不变子空间.
 	\end{proof}
 	\begin{exercise}
 		证明:反对称矩阵的特征值为0或者纯虚数。
 	\end{exercise}
 	\begin{proof}
-		设$\boldsymbol{A}$是反对称实矩阵,$\lambda$是$\boldsymbol{A}$的一个特征值,$\boldsymbol{\xi}$为相应的特征向量,即$\boldsymbol{A\xi}=\lambda\boldsymbol{\xi}$,则
-		$$
-		\bar{\boldsymbol{\xi}}'\boldsymbol{A\xi}=\bar{\boldsymbol{\xi}}'(-\boldsymbol{A}')\boldsymbol{\xi}=-\bar{\boldsymbol{\xi}}'\boldsymbol{A}'\boldsymbol{\xi}=-(\boldsymbol{A}\bar{\boldsymbol{\xi}})'\boldsymbol{\xi}=-(\overline{\boldsymbol{A\xi}})'\boldsymbol{\xi}
-		$$
+		设$\AA$是反对称实矩阵,$\lambda$是$\AA$的一个特征值,$\boldsymbol{\xi}$为相应的特征向量,即$\boldsymbol{A\xi}=\lambda\boldsymbol{\xi}$,则
+		\begin{equation}
+		\bar{\boldsymbol{\xi}}'\boldsymbol{A\xi}=\bar{\boldsymbol{\xi}}'(-\AA')\boldsymbol{\xi}=-\bar{\boldsymbol{\xi}}'\AA'\boldsymbol{\xi}=-(\AA\bar{\boldsymbol{\xi}})'\boldsymbol{\xi}=-(\overline{\boldsymbol{A\xi}})'\boldsymbol{\xi}
+		\end{equation}
 		即有$\lambda\bar{\boldsymbol{\xi}}\boldsymbol{\xi}=-\bar{\lambda}\bar{\boldsymbol{\xi}}\boldsymbol{\xi}$,从而$\lambda=-\bar{\lambda}$.\\
 		令$\lambda=a+ib$,代入上式得$a+ib=-(a-ib)$,即有$a=0$.故$\lambda$是0或纯虚数.
 	\end{proof}
 	\begin{exercise}
-		如果$\lambda$是正交矩阵$\boldsymbol{A}$的特征值,则$\frac{1}{\lambda}$也是正交矩阵$\boldsymbol{A}$的特征值.
+		如果$\lambda$是正交矩阵$\AA$的特征值,则$\frac{1}{\lambda}$也是正交矩阵$\AA$的特征值.
 	\end{exercise}
 	\begin{proof}
-		设$\lambda$是$\boldsymbol{A}$的特征值,已知$\lambda^{-1}$是$\boldsymbol{A}^{-1}$的特征值,由于$\boldsymbol{A}$是正交矩阵,$\boldsymbol{A}'=\boldsymbol{A}^{-1}$,所以$\lambda^{-1}$是$\boldsymbol{A}'$的特征值.因为$\boldsymbol{A}$与$\boldsymbol{A}'$有相同的特征值,所以$\lambda^{-1}$也是$\boldsymbol{A}$的特征值.
+		设$\lambda$是$\AA$的特征值,已知$\lambda^{-1}$是$\AA^{-1}$的特征值,由于$\AA$是正交矩阵,$\AA'=\AA^{-1}$,所以$\lambda^{-1}$是$\AA'$的特征值.因为$\AA$与$\AA'$有相同的特征值,所以$\lambda^{-1}$也是$\AA$的特征值.
 	\end{proof}
 	\begin{exercise}
-		设$\boldsymbol{A},\boldsymbol{B}$都是实对称矩阵,证明:存在正交矩阵$\boldsymbol{Q},s.t.,\boldsymbol{Q}^{-1}\boldsymbol{AQ}=\boldsymbol{B}$的充要条件为$\boldsymbol{A},\boldsymbol{B}$的特征多项式的根全部相同.
+		设$\AA,\BB$都是实对称矩阵,证明:存在正交矩阵$\QQ,s.t.,\QQ^{-1}\boldsymbol{AQ}=\BB$的充要条件为$\AA,\BB$的特征多项式的根全部相同.
 	\end{exercise}
 	\begin{proof}
-		必要性.若$\boldsymbol{T}'\boldsymbol{AT}=\boldsymbol{B}$,即$\boldsymbol{A},\boldsymbol{B}$相似,则$\boldsymbol{A},\boldsymbol{B}$的特征多项式相同,所以它们的特征根相同.\\
-		充分性.设$\lambda_1,\lambda_2,\cdots,\lambda_n$为$\boldsymbol{A}$和$\boldsymbol{B}$的特征值,由$\boldsymbol{A},\boldsymbol{B}$为实对称矩阵,则存在正交矩阵$\boldsymbol{X}$和$\boldsymbol{Y}$,使
-		$$
-		\boldsymbol{X}^{-1}\boldsymbol{AX}=
+		必要性.若$\TT'\boldsymbol{AT}=\BB$,即$\AA,\BB$相似,则$\AA,\BB$的特征多项式相同,所以它们的特征根相同.\\
+		充分性.设$\lambda_1,\lambda_2,\cdots,\lambda_n$为$\AA$和$\BB$的特征值,由$\AA,\BB$为实对称矩阵,则存在正交矩阵$\XX$和$\YY$,使
+		\begin{equation}
+		\XX^{-1}\boldsymbol{AX}=
 		\begin{bmatrix}
 		\lambda_1&&\\
 		&\ddots&\\
 		&&\lambda_n
 		\end{bmatrix}
-		=\boldsymbol{Y}^{-1}\boldsymbol{BY}
-		$$
+		=\YY^{-1}\boldsymbol{BY}
+		\end{equation}
 		于是
-		$$
-		\boldsymbol{YX}^{-1}\boldsymbol{AXY}^{-1}=\boldsymbol{B}
-		$$
-		令$\boldsymbol{T}=\boldsymbol{XY}^{-1}$,由$\boldsymbol{X},\boldsymbol{Y}$是正交矩阵知,$\boldsymbol{T}$也是正交矩阵,且有$\boldsymbol{T}^{-1}\boldsymbol{AT}=\boldsymbol{B}$.
+		\begin{equation}
+		\boldsymbol{YX}^{-1}\boldsymbol{AXY}^{-1}=\BB
+		\end{equation}
+		令$\TT=\boldsymbol{XY}^{-1}$,由$\XX,\YY$是正交矩阵知,$\TT$也是正交矩阵,且有$\TT^{-1}\boldsymbol{AT}=\BB$.
 	\end{proof}
 	\begin{exercise}
-		设$\boldsymbol{A}$是$n$阶实对称矩阵,且$\boldsymbol{A}^2=\boldsymbol{A}$.证明:存在正交矩阵
-		$$
-		\boldsymbol{Q},s.t.,\boldsymbol{Q}^{-1}\boldsymbol{AQ}=diag(1,\cdots,1,0,\cdots,0).
-		$$
+		设$\AA$是$n$阶实对称矩阵,且$\AA^2=\AA$.证明:存在正交矩阵
+		\begin{equation}
+		\QQ,s.t.,\QQ^{-1}\boldsymbol{AQ}=diag\left(1,\cdots,1,0,\cdots,0\right).
+		\end{equation}
 	\end{exercise}
 	\begin{proof}
-		设$\lambda$是$\boldsymbol{A}$的任意特征值,$\boldsymbol{\xi}$是属于$\lambda$的特征向量,则$\boldsymbol{A\xi}=\lambda\boldsymbol{\xi}$,从而
-		$$
-		\boldsymbol{A}^2\boldsymbol{\xi}=\boldsymbol{A}(\boldsymbol{A\xi})=\boldsymbol{A}(\lambda\boldsymbol{\xi})=\lambda\boldsymbol{A\xi}=\lambda^2\boldsymbol{\xi}.
-		$$
-		又由于$\boldsymbol{A}^2=\boldsymbol{A}$,所以有$\lambda^2\boldsymbol{\xi}=\boldsymbol{A}^2\boldsymbol{\xi}=\boldsymbol{A\xi}=\lambda\boldsymbol{\xi}$,即$(\lambda^2-\lambda)\boldsymbol{\xi}=0$,因为$\boldsymbol{\xi}\ne\boldsymbol{0}$,故$\lambda^2-\lambda=0$,从而$\lambda=0$或1,再由定理7知,存在正交矩阵$\boldsymbol{Q}$,使
-		$$
-		\boldsymbol{Q}^{-1}\boldsymbol{AQ}=diag(1,\cdots,1,0,\cdots,0).
-		$$
-		在上式中的对角线元素中,1的个数为$\boldsymbol{A}$的特征值1的个数,0的个数为$\boldsymbol{A}$的特征值0的个数.
+		设$\lambda$是$\AA$的任意特征值,$\boldsymbol{\xi}$是属于$\lambda$的特征向量,则$\boldsymbol{A\xi}=\lambda\boldsymbol{\xi}$,从而
+		\begin{equation}
+		\AA^2\boldsymbol{\xi}=\AA(\boldsymbol{A\xi})=\AA(\lambda\boldsymbol{\xi})=\lambda\boldsymbol{A\xi}=\lambda^2\boldsymbol{\xi}.
+		\end{equation}
+		又由于$\AA^2=\AA$,所以有$\lambda^2\boldsymbol{\xi}=\AA^2\boldsymbol{\xi}=\boldsymbol{A\xi}=\lambda\boldsymbol{\xi}$,即$(\lambda^2-\lambda)\boldsymbol{\xi}=0$,因为$\boldsymbol{\xi}\ne\boldsymbol{0}$,故$\lambda^2-\lambda=0$,从而$\lambda=0$或1,再由定理7知,存在正交矩阵$\QQ$,使
+		\begin{equation}
+		\QQ^{-1}\boldsymbol{AQ}=diag\left(1,\cdots,1,0,\cdots,0\right).
+		\end{equation}
+		在上式中的对角线元素中,1的个数为$\AA$的特征值1的个数,0的个数为$\AA$的特征值0的个数.
 	\end{proof}
 \end{document}
