--- a/Linear Algrabra-new/LAbf.sty
+++ b/Linear Algrabra-new/LAbf.sty
@@ -4,6 +4,7 @@
 \newcommand{\BB}{\boldsymbol{B}}
 \newcommand{\CC}{\boldsymbol{C}}
 \newcommand{\DD}{\boldsymbol{D}}
+\newcommand{\RR}{\boldsymbol{R}}
 \newcommand{\XX}{\boldsymbol{X}}
 \newcommand{\YY}{\boldsymbol{Y}}
 \newcommand{\ZZ}{\boldsymbol{Z}}
@@ -16,3 +17,5 @@
 \newcommand{\bfbt}{\boldsymbol{\beta}}
 \newcommand{\bfxi}{\boldsymbol{\xi}}
 \newcommand{\bfeta}{\boldsymbol{\eta}}
+\newcommand{\bfa}{\boldsymbol{a}}
+\newcommand{\bfh}{\boldsymbol{h}}
