--- a/Linear Algrabra-new/Linear Algrabra.tex
+++ b/Linear Algrabra-new/Linear Algrabra.tex
@@ -12,7 +12,7 @@
 \version{1.00}
 \extrainfo{Even though the truth is not a happy time, we have to be honest ,because more effort needed to cover the truth. --- Bertr Russell}
 \logo{logo.png}
-\cover{cover.jpg}
+\cover{cover1.jpg}
 
 
 \begin{document}
