--- a/Linear Algrabra-new/LAbf.sty
+++ b/Linear Algrabra-new/LAbf.sty
@@ -19,3 +19,5 @@
 \newcommand{\bfeta}{\boldsymbol{\eta}}
 \newcommand{\bfa}{\boldsymbol{a}}
 \newcommand{\bfh}{\boldsymbol{h}}
+\DeclareMathOperator{\Image}{Im}
+\DeclareMathOperator{\Ker}{Ker}
