--- a/Linear Algrabra-new/Linear Algebra.tex
+++ b/Linear Algrabra-new/Linear Algebra.tex
@@ -2,7 +2,7 @@
 \usepackage{mathtools}
 \usepackage{LAbf}
 % title info
-\title{Linear Algrabra}
+\title{Linear Algebra}
 \subtitle{高等代数作业}
 % bio info
 \author{JJK}
