--- a/EnglishNote/EnglishNote.tex
+++ b/EnglishNote/EnglishNote.tex
@@ -27,9 +27,9 @@
     %Chapter:Advanced Phrase
     \input{Chapter/AdvancedPhrase.tex}
     %Chapter:Advanced Sentence
-    %\input{Chapter/AdvancedSentence.tex}
+    \input{Chapter/AdvancedSentence.tex}
     %Chapter:Special Syntax
-    \input{Chapter/SpecialSyntax.tex}
+    %\input{Chapter/SpecialSyntax.tex}
     %Chapter:Composition outline
     %\input{Chapter/CompositionOutline.tex}
     %Chapter:Translate Vocabulary
