--- a/MaYuan/MaYuan.tex
+++ b/MaYuan/MaYuan.tex
@@ -1,6 +1,6 @@
 \documentclass[device=pad,lang=cn,UTF8]{elegantbook}
 
-\title{马原复习}
+\title{马原复习123}
 \subtitle{马克思主义基本原理概论}
 \author{$\aleph$}
 \institute{Jiang Xi Science and Technology University}
