--- a/ModernAlgebra/ModernAlgebra.tex
+++ b/ModernAlgebra/ModernAlgebra.tex
@@ -1,4 +1,6 @@
-\documentclass[hyperref,oneside]{book}
+% !TeX program = xelatex
+% !TeX encoding = UTF-8
+\documentclass[hyperref,oneside,UTF8,scheme=chinese,heading=true]{book}
 
 \usepackage{MathBF}
 \usepackage{geometry}
@@ -10,7 +12,7 @@
 \usepackage{esint}
 \usepackage{tikz}
 \usepackage{graphics}
-\usepackage[UTF8,scheme=chinese,heading=true]{ctex}
+
 
 %\everymath{\displaystyle}
 
@@ -31,7 +33,7 @@
         \includegraphics[scale=1.4]{Figure/ctanlion.eps}
         %\includegraphics{Figure/ctanlion.eps}
         \begin{center}
-            \Huge{\bfseries近世代数引论}\\
+            \Huge{近世代数引论}\\ %\bfseries
             \vspace{15pt}
             \Large\itshape{冯克勤}\\
 			\Large\itshape{仅供学习使用，严禁商业使用}
